--- a/vars.yaml
+++ b/vars.yaml
@@ -4,14 +4,13 @@ region: us-west-2
 credit_instance_size: t2.medium
 standard_instance_size: c4.large
 scale_down:
-  alarm_duration: 5
+  alarm_duration: 60
   threshold: 10
-  cooldown: 60
 credits:
   alarm_duration: 10
-  threshold: 2
-  cooldown: 10
+  threshold: 5
   group_percent: 25
 enabled: True
-asg_identifier: your-asg-name
+asg_identifier: labroots-prod-asg-AutoscalingGroup-XHLTY56ZMJT8
+base_launch_config_identifier: labroots-prod-asg-LaunchConfiguration-HQXWX7IIXZD8
 ...
