--- a/cloudformation.yaml
+++ b/cloudformation.yaml
@@ -57,17 +57,17 @@
         template={{ playbook_dir }}/json/alarms.json
     args:
         template_parameters:
-            RdsInstance: "{{ rds_identifier }}"
-            UpThreshold: "{{ scale_up['threshold'] }}"
-            UpEvaluations: "{{ scale_up['alarm_duration'] }}"
+            AsgIdentifier: "{{ asg_identifier }}"
             DownThreshold: "{{ scale_down['threshold'] }}"
             DownEvaluations: "{{ scale_down['alarm_duration'] }}"
             CreditThreshold: "{{ credits['threshold'] }}"
             CreditEvaluations: "{{ credits['alarm_duration'] }}"
+            DragThreshold: "{{ drag['threshold'] }}"
+            DragEvaluations: "{{ drag['alarm_duration'] }}"
     register: alarms
 
   - name: Write output of the alarm names to vars
-    copy: content="---\nalarm_high{{ ':' }} {{ alarms['stack_outputs']['UpAlarm'] }}\nalarm_low{{ ':' }} {{ alarms['stack_outputs']['DownAlarm'] }}\nalarm_credits{{ ':' }} {{ alarms['stack_outputs']['CreditLowAlarm'] }}\n..." dest="{{ playbook_dir }}/tmp/alarms.yaml"
+    copy: content="---\nalarm_drag{{ ':' }} {{ alarms['stack_outputs']['DragAlarm'] }}\nalarm_low{{ ':' }} {{ alarms['stack_outputs']['DownAlarm'] }}\nalarm_credits{{ ':' }} {{ alarms['stack_outputs']['CreditLowAlarm'] }}\n..." dest="{{ playbook_dir }}/tmp/alarms.yaml"
 
   - name: Unzip deps
     unarchive: src={{ playbook_dir }}/rec2/deps.zip dest={{ playbook_dir }}/lambda
@@ -94,7 +94,7 @@
         template_parameters:
             TimeToken: "{{ time_token }}"
             BucketName: "{{ s3['stack_outputs']['BucketName'] }}"
-            RdsInstance: "{{ rds_identifier }}"
+            AsgIdentifier: "{{ asg_identifier }}"
             LambdaRole: "{{ iam['stack_outputs']['LambdaRole'] }}"
     register: lambda
 
