rename few items

--- a/cloudformation.yaml
+++ b/cloudformation.yaml
@@ -67,7 +67,7 @@
     register: alarms
 
   - name: Write output of the alarm names to vars
-    copy: content="---\nalarm_drag{{ ':' }} {{ alarms['stack_outputs']['DragAlarm'] }}\nalarm_low{{ ':' }} {{ alarms['stack_outputs']['DownAlarm'] }}\nalarm_credits{{ ':' }} {{ alarms['stack_outputs']['CreditLowAlarm'] }}\n..." dest="{{ playbook_dir }}/tmp/alarms.yaml"
+    copy: content="---\nalarm_drag{{ ':' }} {{ alarms['stack_outputs']['DragAlarm'] }}\nalarm_low_cpu{{ ':' }} {{ alarms['stack_outputs']['CpuLowAlarm'] }}\nalarm_credits{{ ':' }} {{ alarms['stack_outputs']['CreditLowAlarm'] }}\n..." dest="{{ playbook_dir }}/tmp/alarms.yaml"
 
   - name: Unzip deps
     unarchive: src={{ playbook_dir }}/rec2/deps.zip dest={{ playbook_dir }}/lambda
