first shot at event source

--- a/cloudformation.yaml
+++ b/cloudformation.yaml
@@ -97,11 +97,20 @@
             LambdaRole: "{{ iam['stack_outputs']['LambdaRole'] }}"
     register: lambda
 
+  - name: Create Event
+    cloudformation: >
+        stack_name="{{ stack_prefix }}-event-source"
+        state=present
+        region="{{region}}"
+        template={{ playbook_dir }}/json/event-source.json
+    args:
+        template_parameters:
+            LambdaArn: "{{ lambda['stack_outputs']['LambdaFunctionArn'] }}"
+            LambdaRole: "{{ iam['stack_outputs']['LambdaRole'] }}"
+    register: lambda
+
   - name: Clean up after ourselves
     file: path="{{ playbook_dir }}/{{ item }}" state=absent
     with_items: working_dirs
 
-  - name: "Add reminder to manually set the recurring "
-    debug: msg="~~~ Reminder!! - Go set the recurring lambda call manually - https://github.com/mediatemple/ReC2 ~~~"
-    with_sequence: start=0 end=3
 ...
